# esp-remoteid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig.defaults
.dev/: compose.yml  ota-openapi.yaml
.dev/keys/: device.pem  device_pub.pem
.dev/scripts/: detect-opendroneid-ble.py  provision_key.py
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.github/workflows/: firmware.yml
components/monocypher/: CMakeLists.txt
components/opendroneid_core/: CMakeLists.txt
src/remoteid/: CMakeLists.txt  Kconfig  Kconfig.lighting  main.c  remoteid.c
src/remoteid/led/: indicator.c  indicator.h  lighting.c  lighting.h  pattern.c  pattern.h
src/remoteid/ota/: ota.c  ota.h
src/remoteid/remoteid/: auth.c  auth.h  ble.c  ble.h  config.h  encode.c  encode.h  indicator.c  indicator.h  led.c  led.h  lighting.c  lighting.h  mavlink.c  mavlink.h  model.c  model.h  pattern.c  pattern.h  store.c  store.h  types.h  wifi.c  wifi.h
