idf_component_register(
    SRCS
        "main.c"
        "remoteid/auth.c"
        "remoteid/ble.c"
        "remoteid/encode.c"
        "remoteid/indicator.c"
        "remoteid/lighting.c"
        "remoteid/mavlink.c"
        "remoteid/model.c"
        "remoteid/pattern.c"
        "remoteid/store.c"
        "remoteid/wifi.c"
    INCLUDE_DIRS
        "."
        "remoteid"
    REQUIRES
        bt
        esp_driver_gpio
        esp_driver_rmt
        esp_driver_uart
        esp_event
        esp_netif
        esp_timer
        esp_wifi
        mbedtls
        monocypher
        nvs_flash
        opendroneid_core
)

target_include_directories(${COMPONENT_LIB} PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/../../third_party/mavlink_c_library_v2"
)
